--- a/index.html
+++ b/index.html
@@ -7,9 +7,27 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Creepster&family=Creepy&family=Fredoka+One:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <!-- Amplitude tracking script -->
-    <script src="https://cdn.amplitude.com/script/c8b2935625ccdaa5e1e8accfd5a0164e.js"></script><script>window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));window.amplitude.init('c8b2935625ccdaa5e1e8accfd5a0164e', {"fetchRemoteConfig":true,"autocapture":{"attribution":true,"fileDownloads":true,"formInteractions":true,"pageViews":true,"sessions":true,"elementInteractions":true,"networkTracking":true,"webVitals":true,"frustrationInteractions":true}});</script></head>
-<body>
+    <script src="https://cdn.amplitude.com/script/c8b2935625ccdaa5e1e8accfd5a0164e.js"></script>
+    <script>
+        window.amplitude.add(window.sessionReplay.plugin({sampleRate: 1}));
+        window.amplitude.init('c8b2935625ccdaa5e1e8accfd5a0164e', {
+            "fetchRemoteConfig": true,
+            "autocapture": {
+                "attribution": true,
+                "fileDownloads": true,
+                "formInteractions": true,
+                "pageViews": true,
+                "sessions": true,
+                "elementInteractions": true,
+                "networkTracking": true,
+                "webVitals": true,
+                "frustrationInteractions": true
+            }
+        });
+    </script>
+</head><body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
